2010-06-01 Homer Xing <homer.xing@gmail.com>

    * Add stardict dictionaries in Fedora

2010-05-31 Homer Xing <homer.xing@gmail.com>

    * Improve desktop environment detection.

2010-05-30 MA Yue <velly.empire@gmail.com>

    *Add the Screensaver Panel

2010-05-30 Homer Xing <homer.xing@gmail.com>

    * Add a preference menuitem to choose default pane.
    * Re-enable Oracle repository.
    * Move language support to Computer Doctor pane.
    * Add Eclipse owner correction in Computer Doctor pane.
    * Fix bug: MPlayer-vod cannot be installed.
    * Fix bug: cannot install software without key.
    * Fix bug: SHA-DA radio cannot be installed.
    * Do not raise NotImplementedError when remove Aptana. Display some text instead.
    * Fix bug: Install the latest songbird.
    * Fix bug: _download_one_file.install() always fail even if successfully copied file.
    * Fix bug: cannot download NScript.
    * Fix bug: Weave is renamed to Firefox Sync.
    * Support Linux Deepin. Linux Deepin users please upgrade to 10.05.93.

2010-05-29 MA Yue <velly.empire@gmail.com>

    * Reset GNOME

2010-05-29 MA Yue <velly.empire@gmail.com>

    * Add the 'reset gnome configuration settings'

2010-05-29 QI Chengjie <starboy.qi@gmail.com>

    * Add some eclipse extensions for Fedora
    * Add ESET NOD32
    * Add compression strategy setting
    * Add some GEdit setting
    
2010-05-29 Homer Xing <homer.xing@gmail.com>

    * Move OpenJDK to native_apps
    * Merge Generic_Genome_Browser
    * Ellipsize text end in UbuntuAutoRemovableBox
    * Put UbuntuAutoRemovableBox & UbuntuDeleteUnusedConfigBox in a row
    * Chosen means "will remove" in UbuntuDeleteUnusedConfigBox & UbuntuAutoRemovableBox

2010-05-28 Homer Xing <homer.xing@gmail.com>

    * Support YLMF. YLMF users please upgrade to version 10.05.92

2010-05-23 Devil Wang <wxjeacen@gmail.com>

    * Add a lot of software for Fedora
	
2010-05-23 Homer Xing <homer.xing@gmail.com>
