@@ -1,6 +1,7 @@
 2010-06-01 Homer Xing <homer.xing@gmail.com>
 
-    * Add stardict dictionaries in Fedora
+    * Move stardict dictionaries into computer doctor pane
+    * Move gcompris voice into computer doctor pane
 
 2010-05-31 Homer Xing <homer.xing@gmail.com>
 
